--- a/16/l10n_bo_invoice/views/l10n_bo_pos.xml
+++ b/16/l10n_bo_invoice/views/l10n_bo_pos.xml
@@ -27,6 +27,7 @@
         <field name="arch" type="xml">
             <form>
                 <header>
+                    <button name="cuis_request" type="object" string="Solicitar cuis" icon="fa-play-circle" />
                 </header>
                 <sheet>
                     <h1>
@@ -37,7 +38,7 @@
                             <field name="branch_office_id"/>
                         </group>
                         <group>
-                            <field name="cuis"/>
+                            <field name="cuis_id"/>
                         </group>
                     </group>
                     <group>    
