--- a/16/l10n_bo_invoice/views/l10n_bo_branch_office.xml
+++ b/16/l10n_bo_invoice/views/l10n_bo_branch_office.xml
@@ -27,6 +27,9 @@
         <field name="arch" type="xml">
             <form>
                 <header>
+                    <button name="update_pos_from_siat" type="object" string="ACTUALIZAR POS(S)" icon="fa-play-circle" />
+                    <button name="cuis_massive_request" type="object" string="ACTUALIZAR CUIS(S)" icon="fa-play-circle" />
+                    
                 </header>
                 <sheet>
                     <group>
